--- a/k8sf3w/w1/ex03/ex03.md
+++ b/k8sf3w/w1/ex03/ex03.md
@@ -3,6 +3,8 @@
   - Deploy containers as Deployments in Pods
   - Use a Service to access a Pod
 
+##  NOTE: I am still unable to access the container contents 
+## from the "Internet" - fro the external IP of the VM (node)
 
 ```
 { clear && \
@@ -29,8 +31,11 @@ watch kubectl get deployments,pods,services
 
 clear
 
-#
-wat
+#  watch the Kubernetes pods being initialized and made to run
+watch kubectl get deplooyments,pods,services
+
+#  see what happpens, wait until all pods are deployed, then press <Ctrl-C>
+
 
 
 
